packages/typ/tests/fixtures/diagnostics/0321_fun_monomorphic_int_bool_use_09.ml.expected
File "0321_fun_monomorphic_int_bool_use_09.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0321_fun_monomorphic_int_bool_use_09 is not a valid module name.

File "0321_fun_monomorphic_int_bool_use_09.ml", line 1, characters 25-29:
1 | let use_iota f = (f 8, f true)
                             ^^^^
Error: This expression should not be a boolean literal, the expected type is
       int
